--- a/tutorial/quick-started/index.html
+++ b/tutorial/quick-started/index.html
@@ -10,41 +10,41 @@ data-styled.g2[id="sidebar__StyledSidebar-ntx4l0-0"]{content:"gIvoaA,"}/*!sc*/
 .rAjWf{display:grid;grid-template-areas:'header header header header header header' 'sidebar main main main main right' 'sidebar footer footer footer footer footer';grid-gap:10px;}/*!sc*/
 data-styled.g3[id="tutorial__StyledContainer-sc-1uhnts6-0"]{content:"rAjWf,"}/*!sc*/
 .jRUgEc{grid-area:main;width:80%;}/*!sc*/
-.jRUgEc img{margin:30px;display:block;max-width:80%;}/*!sc*/
+.jRUgEc img{margin:30px 0px;display:block;max-width:100%;}/*!sc*/
 .jRUgEc h1{font-size:3rem;font-weight:600;margin-top:1em;}/*!sc*/
 .jRUgEc h2{font-size:1.4rem;font-weight:600;margin-top:1em;}/*!sc*/
 .jRUgEc h3{font-size:1rem;font-weight:600;}/*!sc*/
 data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!sc*/
-</style><link as="script" rel="preload" href="/animeBoard/webpack-runtime-6eb5b4232faa65c449fd.js"/><link as="script" rel="preload" href="/animeBoard/framework-d585a04b7d285a7760d6.js"/><link as="script" rel="preload" href="/animeBoard/styles-8fab2804fb6f85b824b6.js"/><link as="script" rel="preload" href="/animeBoard/app-8ecaac7c1b985c249fdc.js"/><link as="script" rel="preload" href="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js"/><link as="script" rel="preload" href="/animeBoard/component---src-templates-tutorial-js-6e2c820f407428610883.js"/><link as="fetch" rel="preload" href="/animeBoard/page-data\tutorial\quick-started\page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/animeBoard/page-data\app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="tutorial__StyledContainer-sc-1uhnts6-0 rAjWf"><div class="header__StyledHeader-sc-1k4wusj-0 gzUzju"><nav class="navbar navbar-expand navbar-dark bg-dark"><a class="navbar-brand" href="/animeBoard/">主页</a><a aria-current="page" class="navbar-brand" href="/animeBoard/tutorial/quick-started">快速入门</a><a href="https://github.com/carsonDB/animeBoard" class="navbar-brand">GitHub</a></nav></div><div class="sidebar__StyledSidebar-ntx4l0-0 gIvoaA"><div class="col-md-12 d-none d-md-block bg-light sidebar nav"><div class="nav-item"><a href="/animeBoard/tutorial/write-narration" class="nav-link">写文稿</a><a href="/animeBoard/tutorial/elements-keyword" class="nav-link">元素与关键词</a><a href="/animeBoard/tutorial/make-animation" class="nav-link">制作动画</a><a href="/animeBoard/tutorial/record-and-align" class="nav-link">录音与对齐</a></div></div></div><div class="tutorial__StyledContent-sc-1uhnts6-1 jRUgEc"><h1>快速入门</h1><h6>March 08, 2021</h6><div style="margin-top:4em"><p>本章将带您快速做一个视频。</p>
+</style><link as="script" rel="preload" href="/animeBoard/webpack-runtime-d55409a8d93717225783.js"/><link as="script" rel="preload" href="/animeBoard/framework-d585a04b7d285a7760d6.js"/><link as="script" rel="preload" href="/animeBoard/styles-8fab2804fb6f85b824b6.js"/><link as="script" rel="preload" href="/animeBoard/app-8ecaac7c1b985c249fdc.js"/><link as="script" rel="preload" href="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js"/><link as="script" rel="preload" href="/animeBoard/component---src-templates-tutorial-js-993bdcdcef6010e68897.js"/><link as="fetch" rel="preload" href="/animeBoard/page-data\tutorial\quick-started\page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/animeBoard/page-data\app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="tutorial__StyledContainer-sc-1uhnts6-0 rAjWf"><div class="header__StyledHeader-sc-1k4wusj-0 gzUzju"><nav class="navbar navbar-expand navbar-dark bg-dark"><a class="navbar-brand" href="/animeBoard/">主页</a><a aria-current="page" class="navbar-brand" href="/animeBoard/tutorial/quick-started">快速入门</a><a href="https://github.com/carsonDB/animeBoard" class="navbar-brand">GitHub</a></nav></div><div class="sidebar__StyledSidebar-ntx4l0-0 gIvoaA"><div class="col-md-12 d-none d-md-block bg-light sidebar nav"><div class="nav-item"><a href="/animeBoard/tutorial/write-narration" class="nav-link">写文稿</a><a href="/animeBoard/tutorial/elements-keyword" class="nav-link">元素与关键词</a><a href="/animeBoard/tutorial/make-animation" class="nav-link">制作动画</a><a href="/animeBoard/tutorial/record-and-align" class="nav-link">录音与对齐</a></div></div></div><div class="tutorial__StyledContent-sc-1uhnts6-1 jRUgEc"><h1>快速入门</h1><h6>March 08, 2021</h6><div style="margin-top:4em"><p>本章将带您快速做一个视频。</p>
 <h2>创建项目（文件夹）</h2>
 <p>初次打开软件，就会有一个弹窗，选择一个空文件夹，作为项目存储的地方。</p>
 <p>初始化好后，这个文件夹中就会有一个<code>.proj</code>的文件夹，存放编辑文档的所有信息。</p>
 <h2>写文稿</h2>
 <p>左边框中的写文稿，每一段文字作为一幕（场景）。</p>
-<p>如果需要深入了解功能，可以参看<a href="/animeBoard/tutorial/write-narration">文稿的详细文档</a></p>
+<p>如果需要深入了解功能，可以参看<a href="/tutorial/write-narration">文稿的详细文档</a></p>
 <h2>创建元素</h2>
 <p>选中任意的文字作为关键词，在出现的工具框中选择方框。
-<img src="/animeBoard/edf37b0639179853da00e039839a1e50/createBox.gif"></p>
+<img src="/edf37b0639179853da00e039839a1e50/createBox.gif"></p>
 <p>然后，在右边的画面中拖动来创建。
-<img src="/animeBoard/2d51a6c72beccf9dfbf3041b57844e08/dragTocreateBox.gif"></p>
-<p>关于元素的创建、删除，然后它们与关键词的关系，可以参看<a href="/animeBoard/tutorial/elements-keyword">元素与关键词</a></p>
+<img src="/2d51a6c72beccf9dfbf3041b57844e08/dragTocreateBox.gif"></p>
+<p>关于元素的创建、删除，然后它们与关键词的关系，可以参看<a href="/tutorial/elements-keyword">元素与关键词</a></p>
 <h2>调整元素</h2>
 <p>在元素被聚焦的情况下，到右下角的设置框中设置元素的属性。这里把直角角度变圆弧。
-<img src="/animeBoard/6fd4bb580c526a47ab2e519a06997839/setBox.gif"></p>
+<img src="/6fd4bb580c526a47ab2e519a06997839/setBox.gif"></p>
 <h2>创建关键点</h2>
 <p>在后面的文中选择一处关键点，然后点击<code>⊕</code>按钮，可以在当下创建关键点（类似于关键帧）。
-<img src="/animeBoard/c635979a09a408ae82d22c3f800b146b/createKeypoint.gif"></p>
+<img src="/c635979a09a408ae82d22c3f800b146b/createKeypoint.gif"></p>
 <p>此后，拖动右边的元素。元素将会在此关键点产生动画。
 然后，点击左侧的预览按钮<code>▶</code>效果如下：
-<img src="/animeBoard/9f46eee2040454174fa955b5a2bcafd4/animate.gif"></p>
+<img src="/9f46eee2040454174fa955b5a2bcafd4/animate.gif"></p>
 <p>类似的，还可以设置消失等动画。</p>
-<p>关于更多的动画制作，可以参看<a href="/animeBoard/tutorial/make-animation">动画制作</a></p>
+<p>关于更多的动画制作，可以参看<a href="/tutorial/make-animation">动画制作</a></p>
 <h2>录音</h2>
 <p>每一段单独录音（实践证明每段文字越短，总录音时间就越少）。
 点击每段的录音按钮就开始，再点一次开始文字与录音自动对齐。这大概需要几十秒，请耐心等待。在此期间，请不要再点另一个录音按钮。另外，录音请尽量在安静的环境中，噪音会影响识别成功率。
-<img src="/animeBoard/6a151a5276429cbb9ba7dc14fc3fbc2c/recordAndAlign.gif"></p>
+<img src="/6a151a5276429cbb9ba7dc14fc3fbc2c/recordAndAlign.gif"></p>
 <p>可以反复录音，还可以添加/删除音频。</p>
-<p>关于更多的录音与对齐，可以参看<a href="/animeBoard/tutorial/record-and-align">录音和对齐</a></p>
+<p>关于更多的录音与对齐，可以参看<a href="/tutorial/record-and-align">录音和对齐</a></p>
 <h2>背景音乐</h2>
 <p>当没有元素聚焦时（或点击画面空白处），再在右下角的设置中设置音频的文件地址，调节音量，就设置了全局的背景（目前还不支持局部的背景声音）。
 <span
@@ -53,7 +53,7 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
     >
       <a
     class="gatsby-resp-image-link"
-    href="/animeBoard/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg"
+    href="/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -66,10 +66,10 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
         class="gatsby-resp-image-image"
         alt="bgmSetting"
         title="bgmSetting"
-        src="/animeBoard/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg"
-        srcset="/animeBoard/static/2ccb42b3c8b0b55c8969a10f54e428ae/e07e9/bgmSetting.jpg 200w,
-/animeBoard/static/2ccb42b3c8b0b55c8969a10f54e428ae/066f9/bgmSetting.jpg 400w,
-/animeBoard/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg 627w"
+        src="/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg"
+        srcset="/static/2ccb42b3c8b0b55c8969a10f54e428ae/e07e9/bgmSetting.jpg 200w,
+/static/2ccb42b3c8b0b55c8969a10f54e428ae/066f9/bgmSetting.jpg 400w,
+/static/2ccb42b3c8b0b55c8969a10f54e428ae/362f5/bgmSetting.jpg 627w"
         sizes="(max-width: 627px) 100vw, 627px"
         style="width:100%;height:100%;margin:0;vertical-align:middle;position:absolute;top:0;left:0;"
         loading="lazy"
@@ -78,4 +78,4 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
     </span></p>
 <h2>导出视频</h2>
 <p><strong>导出的视频前，请先把所有的段落都录音</strong>。
-然后点击左上角的导出，设置一下，就可以导出了。</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/tutorial/quick-started";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-e4ff66ed5ec0b4bd2598.js"],"app":["/app-8ecaac7c1b985c249fdc.js"],"component---src-pages-404-js":["/component---src-pages-404-js-29ed3715f54cf9c244c0.js"],"component---src-pages-index-js":["/component---src-pages-index-js-e873ea1ee28b54978012.js"],"component---src-templates-tutorial-js":["/component---src-templates-tutorial-js-6e2c820f407428610883.js"]};/*]]>*/</script><script src="/animeBoard/polyfill-e4ff66ed5ec0b4bd2598.js" nomodule=""></script><script src="/animeBoard/component---src-templates-tutorial-js-6e2c820f407428610883.js" async=""></script><script src="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js" async=""></script><script src="/animeBoard/app-8ecaac7c1b985c249fdc.js" async=""></script><script src="/animeBoard/styles-8fab2804fb6f85b824b6.js" async=""></script><script src="/animeBoard/framework-d585a04b7d285a7760d6.js" async=""></script><script src="/animeBoard/webpack-runtime-6eb5b4232faa65c449fd.js" async=""></script></body></html>
+然后点击左上角的导出，设置一下，就可以导出了。</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/tutorial/quick-started";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-e4ff66ed5ec0b4bd2598.js"],"app":["/app-8ecaac7c1b985c249fdc.js"],"component---src-pages-404-js":["/component---src-pages-404-js-29ed3715f54cf9c244c0.js"],"component---src-pages-index-js":["/component---src-pages-index-js-e873ea1ee28b54978012.js"],"component---src-templates-tutorial-js":["/component---src-templates-tutorial-js-993bdcdcef6010e68897.js"]};/*]]>*/</script><script src="/animeBoard/polyfill-e4ff66ed5ec0b4bd2598.js" nomodule=""></script><script src="/animeBoard/component---src-templates-tutorial-js-993bdcdcef6010e68897.js" async=""></script><script src="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js" async=""></script><script src="/animeBoard/app-8ecaac7c1b985c249fdc.js" async=""></script><script src="/animeBoard/styles-8fab2804fb6f85b824b6.js" async=""></script><script src="/animeBoard/framework-d585a04b7d285a7760d6.js" async=""></script><script src="/animeBoard/webpack-runtime-d55409a8d93717225783.js" async=""></script></body></html>
