--- a/tutorial/write-narration/index.html
+++ b/tutorial/write-narration/index.html
@@ -10,12 +10,12 @@ data-styled.g2[id="sidebar__StyledSidebar-ntx4l0-0"]{content:"gIvoaA,"}/*!sc*/
 .rAjWf{display:grid;grid-template-areas:'header header header header header header' 'sidebar main main main main right' 'sidebar footer footer footer footer footer';grid-gap:10px;}/*!sc*/
 data-styled.g3[id="tutorial__StyledContainer-sc-1uhnts6-0"]{content:"rAjWf,"}/*!sc*/
 .jRUgEc{grid-area:main;width:80%;}/*!sc*/
-.jRUgEc img{margin:30px;display:block;max-width:80%;}/*!sc*/
+.jRUgEc img{margin:30px 0px;display:block;max-width:100%;}/*!sc*/
 .jRUgEc h1{font-size:3rem;font-weight:600;margin-top:1em;}/*!sc*/
 .jRUgEc h2{font-size:1.4rem;font-weight:600;margin-top:1em;}/*!sc*/
 .jRUgEc h3{font-size:1rem;font-weight:600;}/*!sc*/
 data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!sc*/
-</style><link as="script" rel="preload" href="/animeBoard/webpack-runtime-6eb5b4232faa65c449fd.js"/><link as="script" rel="preload" href="/animeBoard/framework-d585a04b7d285a7760d6.js"/><link as="script" rel="preload" href="/animeBoard/styles-8fab2804fb6f85b824b6.js"/><link as="script" rel="preload" href="/animeBoard/app-8ecaac7c1b985c249fdc.js"/><link as="script" rel="preload" href="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js"/><link as="script" rel="preload" href="/animeBoard/component---src-templates-tutorial-js-6e2c820f407428610883.js"/><link as="fetch" rel="preload" href="/animeBoard/page-data\tutorial\write-narration\page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/animeBoard/page-data\app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="tutorial__StyledContainer-sc-1uhnts6-0 rAjWf"><div class="header__StyledHeader-sc-1k4wusj-0 gzUzju"><nav class="navbar navbar-expand navbar-dark bg-dark"><a class="navbar-brand" href="/animeBoard/">主页</a><a class="navbar-brand" href="/animeBoard/tutorial/quick-started">快速入门</a><a href="https://github.com/carsonDB/animeBoard" class="navbar-brand">GitHub</a></nav></div><div class="sidebar__StyledSidebar-ntx4l0-0 gIvoaA"><div class="col-md-12 d-none d-md-block bg-light sidebar nav"><div class="nav-item"><a aria-current="page" href="/animeBoard/tutorial/write-narration" class="nav-link">写文稿</a><a href="/animeBoard/tutorial/elements-keyword" class="nav-link">元素与关键词</a><a href="/animeBoard/tutorial/make-animation" class="nav-link">制作动画</a><a href="/animeBoard/tutorial/record-and-align" class="nav-link">录音与对齐</a></div></div></div><div class="tutorial__StyledContent-sc-1uhnts6-1 jRUgEc"><h1>写文稿</h1><h6>March 09, 2021</h6><div style="margin-top:4em"><p>本章将带您了解文稿的全部功能和细节。</p>
+</style><link as="script" rel="preload" href="/animeBoard/webpack-runtime-d55409a8d93717225783.js"/><link as="script" rel="preload" href="/animeBoard/framework-d585a04b7d285a7760d6.js"/><link as="script" rel="preload" href="/animeBoard/styles-8fab2804fb6f85b824b6.js"/><link as="script" rel="preload" href="/animeBoard/app-8ecaac7c1b985c249fdc.js"/><link as="script" rel="preload" href="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js"/><link as="script" rel="preload" href="/animeBoard/component---src-templates-tutorial-js-993bdcdcef6010e68897.js"/><link as="fetch" rel="preload" href="/animeBoard/page-data\tutorial\write-narration\page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/animeBoard/page-data\app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><div class="tutorial__StyledContainer-sc-1uhnts6-0 rAjWf"><div class="header__StyledHeader-sc-1k4wusj-0 gzUzju"><nav class="navbar navbar-expand navbar-dark bg-dark"><a class="navbar-brand" href="/animeBoard/">主页</a><a class="navbar-brand" href="/animeBoard/tutorial/quick-started">快速入门</a><a href="https://github.com/carsonDB/animeBoard" class="navbar-brand">GitHub</a></nav></div><div class="sidebar__StyledSidebar-ntx4l0-0 gIvoaA"><div class="col-md-12 d-none d-md-block bg-light sidebar nav"><div class="nav-item"><a aria-current="page" href="/animeBoard/tutorial/write-narration" class="nav-link">写文稿</a><a href="/animeBoard/tutorial/elements-keyword" class="nav-link">元素与关键词</a><a href="/animeBoard/tutorial/make-animation" class="nav-link">制作动画</a><a href="/animeBoard/tutorial/record-and-align" class="nav-link">录音与对齐</a></div></div></div><div class="tutorial__StyledContent-sc-1uhnts6-1 jRUgEc"><h1>写文稿</h1><h6>March 09, 2021</h6><div style="margin-top:4em"><p>本章将带您了解文稿的全部功能和细节。</p>
 <p>首先，文稿在这里相当于是<strong>旁白</strong>，或者说是<strong>解说</strong>。
 也就是，视频的播放会完全由文稿的进度来决定的。
 所以，文稿一旦确定了，对应的时间轴中每个词出现的时间点也就确定了。</p>
@@ -28,7 +28,7 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
     >
       <a
     class="gatsby-resp-image-link"
-    href="/animeBoard/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg"
+    href="/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -41,10 +41,10 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
         class="gatsby-resp-image-image"
         alt="playButtons"
         title="playButtons"
-        src="/animeBoard/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg"
-        srcset="/animeBoard/static/58dcbcda28ec8e148363fd497eca15e4/e07e9/playButtons.jpg 200w,
-/animeBoard/static/58dcbcda28ec8e148363fd497eca15e4/066f9/playButtons.jpg 400w,
-/animeBoard/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg 523w"
+        src="/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg"
+        srcset="/static/58dcbcda28ec8e148363fd497eca15e4/e07e9/playButtons.jpg 200w,
+/static/58dcbcda28ec8e148363fd497eca15e4/066f9/playButtons.jpg 400w,
+/static/58dcbcda28ec8e148363fd497eca15e4/8df40/playButtons.jpg 523w"
         sizes="(max-width: 523px) 100vw, 523px"
         style="width:100%;height:100%;margin:0;vertical-align:middle;position:absolute;top:0;left:0;"
         loading="lazy"
@@ -58,7 +58,7 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
     >
       <a
     class="gatsby-resp-image-link"
-    href="/animeBoard/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg"
+    href="/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -71,8 +71,8 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
         class="gatsby-resp-image-image"
         alt="blockPlayButton"
         title="blockPlayButton"
-        src="/animeBoard/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg"
-        srcset="/animeBoard/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg 190w"
+        src="/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg"
+        srcset="/static/a9926eea2a9a0210c7070ab5e842001c/82f15/blockPlayButton.jpg 190w"
         sizes="(max-width: 190px) 100vw, 190px"
         style="width:100%;height:100%;margin:0;vertical-align:middle;position:absolute;top:0;left:0;"
         loading="lazy"
@@ -87,7 +87,7 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
     >
       <a
     class="gatsby-resp-image-link"
-    href="/animeBoard/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg"
+    href="/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -100,9 +100,9 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
         class="gatsby-resp-image-image"
         alt="subtitleButton"
         title="subtitleButton"
-        src="/animeBoard/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg"
-        srcset="/animeBoard/static/cb97be4a124329967a9dc4fb76cbd675/e07e9/subtitleButton.jpg 200w,
-/animeBoard/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg 238w"
+        src="/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg"
+        srcset="/static/cb97be4a124329967a9dc4fb76cbd675/e07e9/subtitleButton.jpg 200w,
+/static/cb97be4a124329967a9dc4fb76cbd675/7ec08/subtitleButton.jpg 238w"
         sizes="(max-width: 238px) 100vw, 238px"
         style="width:100%;height:100%;margin:0;vertical-align:middle;position:absolute;top:0;left:0;"
         loading="lazy"
@@ -112,4 +112,4 @@ data-styled.g4[id="tutorial__StyledContent-sc-1uhnts6-1"]{content:"jRUgEc,"}/*!s
 <h2>语言</h2>
 <p>支持英文和中文。也就是，它会根据文稿中，中文数量的比例、英文数量的比例，来决定着该文稿的语言。
 也就是，不同的文稿可以是不同的语言。这决定着，机器念文稿，以及录音对齐时所采用的语言。</p>
-<p>另外，文稿的语言和软件的语言无关。软件的语言在一台电脑上，会一直是一种。</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/tutorial/write-narration";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-e4ff66ed5ec0b4bd2598.js"],"app":["/app-8ecaac7c1b985c249fdc.js"],"component---src-pages-404-js":["/component---src-pages-404-js-29ed3715f54cf9c244c0.js"],"component---src-pages-index-js":["/component---src-pages-index-js-e873ea1ee28b54978012.js"],"component---src-templates-tutorial-js":["/component---src-templates-tutorial-js-6e2c820f407428610883.js"]};/*]]>*/</script><script src="/animeBoard/polyfill-e4ff66ed5ec0b4bd2598.js" nomodule=""></script><script src="/animeBoard/component---src-templates-tutorial-js-6e2c820f407428610883.js" async=""></script><script src="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js" async=""></script><script src="/animeBoard/app-8ecaac7c1b985c249fdc.js" async=""></script><script src="/animeBoard/styles-8fab2804fb6f85b824b6.js" async=""></script><script src="/animeBoard/framework-d585a04b7d285a7760d6.js" async=""></script><script src="/animeBoard/webpack-runtime-6eb5b4232faa65c449fd.js" async=""></script></body></html>
+<p>另外，文稿的语言和软件的语言无关。软件的语言在一台电脑上，会一直是一种。</p></div></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/tutorial/write-narration";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-e4ff66ed5ec0b4bd2598.js"],"app":["/app-8ecaac7c1b985c249fdc.js"],"component---src-pages-404-js":["/component---src-pages-404-js-29ed3715f54cf9c244c0.js"],"component---src-pages-index-js":["/component---src-pages-index-js-e873ea1ee28b54978012.js"],"component---src-templates-tutorial-js":["/component---src-templates-tutorial-js-993bdcdcef6010e68897.js"]};/*]]>*/</script><script src="/animeBoard/polyfill-e4ff66ed5ec0b4bd2598.js" nomodule=""></script><script src="/animeBoard/component---src-templates-tutorial-js-993bdcdcef6010e68897.js" async=""></script><script src="/animeBoard/cc866bb6a4017375a08fe8ee30776cb5d74a4b58-2d5df58186546ec18775.js" async=""></script><script src="/animeBoard/app-8ecaac7c1b985c249fdc.js" async=""></script><script src="/animeBoard/styles-8fab2804fb6f85b824b6.js" async=""></script><script src="/animeBoard/framework-d585a04b7d285a7760d6.js" async=""></script><script src="/animeBoard/webpack-runtime-d55409a8d93717225783.js" async=""></script></body></html>
